--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,8 @@ build:
 requirements:
   host:
     - python >=3.7
+    - hatchling
     - pip
-    - poetry
   run:
     - python >=3.7
     - mkdocs >=1.0.3
